IaC/kubernetes/clusters/dev/flux-system/services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: source-controller
    app.kubernetes.io/instance: flux-system
    app.kubernetes.io/part-of: flux
    app.kubernetes.io/version: v2.7.3
    control-plane: controller
  name: source-controller
  namespace: flux-system
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: source-controller
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: notification-controller
    app.kubernetes.io/instance: flux-system
    app.kubernetes.io/part-of: flux
    app.kubernetes.io/version: v2.7.3
    control-plane: controller
  name: notification-controller
  namespace: flux-system
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: notification-controller
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: notification-controller
    app.kubernetes.io/instance: flux-system
    app.kubernetes.io/part-of: flux
    app.kubernetes.io/version: v2.7.3
    control-plane: controller
  name: webhook-receiver
  namespace: flux-system
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http-webhook
  selector:
    app: notification-controller
  type: ClusterIP
